2004-09-28  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/score.cc (Score): oops. Copy error_found_ too.

2004-09-27  Jan Nieuwenhuizen  <janneke@gnu.org>

	* stepmake/stepmake/texinfo-rules.make: 
	* Documentation/GNUmakefile: --srcdir build fixes.

	* input/test/coriolan-margin.ly: Put papersize settings in \bookpaper.

	* Documentation/user/latex-lilypond-example.latex:
	* Documentation/user/latex-example.latex: Fix compile errors.
	Still buggy, need more love.

2004-09-27  Werner Lemberg  <wl@gnu.org>

	* tex/lilyponddefs.tex (\lilypondstart): Use \frenchspacing.

2004-09-26  Juergen Reuter  <reuter@ipd.uka.de>

	* Documentation/user/examples.itely: removed \midi block to
	simplify the example

	* Documentation/user/notation.itely: Removed superfluous
	TextSpanner tweakings (is already done by engraver-init.ly).
	Documented bug: vertical alignment of articulations.

	* Documentation/user/notation.itely, ly/engraver-init.ly
	(VaticanaVoice, GregorianTranscriptionVoice): Bugfix: TextSpanner
	padding.

	* Documentation/user/notation.itely, ly/engraver-init.ly: moved
	docu about TextSpanner padding bug from manual to engraver.ly
	(since it's workarounded and hence not user-visible any more)

2004-09-27  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* VERSION: release 2.3.19

2004-09-26  Graham Percival  <gperlist@shaw.ca>

	* ly/property-init.ly: fix bug in displaying ledger lines while
	\hideNotes is on.

	* Documentation/user/notation.itely: more editing.

	* Documentation/user/examples.itely: add piano-dynamics template.

	* input/template/piano-dynamics.ly: remove.

	* Documentation/user/sound-output.itexi: more editing

2004-09-25  Graham Percival  <gperlist@shaw.ca>

	* Documentation/user/notation.itely: more editing.

2004-09-25  Nicolas Sceaux  <nicolas.sceaux@free.fr>

	* scm/ly-from-scheme.scm (read-lily-expression): use ~s in format
	instead of ~a, to get #{ #"foo" #} actually printed to #"foo".

2004-09-24  Han-Wen Nienhuys   <hanwen@xs4all.nl>
