@@ -56,7 +56,7 @@
        \documentclass[a4paper]{article}
        %% safe-mode
        \nofiles
-       \usepackage{inputenc}
+       \usepackage[\lilypondpaperinputencoding]{inputenc}
        \pagestyle{empty}
        \lilypondifundefined{lilypondclassic}
          {%% Nullify [La]TeX page layout settings, page layout by LilyPond.
